# march5

./: Cargo.toml  DESIGN-I.md  DESIGN-II.md  DESIGN-III.md  DESIGN-IV.md  PLAN.md  PROGRESS.md  README.md  STATUS.md
docs/: INET-PLAN.md  README.md
docs/design/: DESIGN-DATABASE.md  DESIGN-I.md  DESIGN-INET.md  DESIGN-V.md
docs/planning/: OPEN-QUESTIONS.md  PLAN-CLI.md  PLAN-DATABASE.md  PLAN-EFFECTS.md  PLAN-GSTORE.md  PLAN-GUARDS.md  PLAN-INET.md  PLAN-LOCKFILE.md  PLAN-OPTIMIZE.md  PLAN-TRANSACTIONS.md  PLAN-WEBUI.md  PLAN-YAML.md
examples/: README.md  helloworld.march5.db
examples/helloworld/: README.md  helloworld.march5.db
kernel/x86-64/: 0branch.asm  add.asm  and.asm  arshift.asm  branch.asm  cfetch.asm  cstore.asm  div.asm  docol.asm  drop.asm  dup.asm  eq.asm  execute.asm  fetch.asm  fromr.asm  ge.asm  gt.asm  land.asm  le.asm  lnot.asm  lor.asm  lshift.asm  lt.asm  mod.asm  mul.asm  ne.asm  not.asm  or.asm  over.asm  rdrop.asm  rfetch.asm  rot.asm  rshift.asm  store.asm  sub.asm  swap.asm  tor.asm  twofromr.asm  twotor.asm  vm.asm  (+4 more)
src/: builder.rs  cbor.rs  cid.rs  db.rs  effect.rs  exec.rs  global_store.rs  guard.rs  iface.rs  inet.rs  interp.rs  lib.rs  main.rs  namespace.rs  node.rs  prim.rs  store.rs  types.rs  word.rs  yaml.rs
src/cli/: mod.rs
src/cli/commands/: builder.rs  catalog.rs  effect.rs  guard.rs  iface.rs  mod.rs  namespace.rs  new.rs  node.rs  prim.rs  state.rs  util.rs  word.rs
